--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Go2 ජ'පුර</title>
+    <title>inivak store</title>
     <link href='store_files/app-icon.png' rel='icon' type='image/x-icon'/>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='store_files/normalize.css'>
