--- a/index.html
+++ b/index.html
@@ -128,9 +128,11 @@
 
 
         <div style="margin-left: 33px;margin-right: 27px;">
+            <a href="tip.html">
             <div class="danger">
                 <p><strong><b>අවධාරණය කරන්න!</b> </strong> මෙය සාමාන්‍ය ආකාරයේ playstore තුලින් Download කිරීමක් නොවන නිසා මෙලෙස Apk ගොනුවක් ඔබගේ දුරකතනයට install කිරීමට ඔබ නොදන්නේනම් මෙතන <br> click කර වැඩිදුර දැනගන්න.</p>
             </div>
+            </a>
 
             <h2 style="color: #343434;"><b>About app</b></h2>
             <h4 style="color: #343434;"><i>
