--- a/tip.html
+++ b/tip.html
@@ -40,6 +40,11 @@
         top: 98px;
         margin: 51px;
     }
+
+        a{
+            text-decoration: none;
+            color: #000;
+        }
     
     </style>
 </head>
