--- a/index.html
+++ b/index.html
@@ -93,6 +93,10 @@
         .space{
             height: 100px;
         }
+        a{
+            text-decoration: none;
+            color: #000;
+        }
 
     </style>
 </head>
@@ -128,12 +132,11 @@
 
 
         <div style="margin-left: 33px;margin-right: 27px;">
-            <a href="tip.html">
+            <a href="tip.html" class="a">
             <div class="danger">
                 <p><strong><b>අවධාරණය කරන්න!</b> </strong> මෙය සාමාන්‍ය ආකාරයේ playstore තුලින් Download කිරීමක් නොවන නිසා මෙලෙස Apk ගොනුවක් ඔබගේ දුරකතනයට install කිරීමට ඔබ නොදන්නේනම් මෙතන <br> click කර වැඩිදුර දැනගන්න.</p>
             </div>
             </a>
-
             <h2 style="color: #343434;"><b>About app</b></h2>
             <h4 style="color: #343434;"><i>
                 This application was created by us for the students of inivak Education instatute.
