--- a/tip.html
+++ b/tip.html
@@ -62,11 +62,11 @@
     <img src="store_files/3.jpg" alt="">
         <h2>දැන් මෙහෙම නොෆටිකෙශන් බාර් එකෙ ඩව්න්ලොඩ් වෙල ඉවර උනු file එක පෙන්නයි. මෙක මෙතන තිබ්බෙ නැතිඋනොත් ඔයාගෙ divece එකෙ my files වලට ගිහින් Downloads කියන file එක ඇතුලෙ බලන්න අනිවාරෙන්නම ඇති.</h2>
     <img src="store_files/4.jpg" alt="">
-    <h2>මෙතන මේ කරන්නෙ ඔයා inivak Edu app එක download කරපු source එකට app instrall කරන්න අවසර දෙන එක...</h2>
+    <h2>මෙතන මේ කරන්නෙ ඔයා inivak Edu app එක download කරපු source එකට app install කරන්න අවසර දෙන එක...</h2>
     <img src="store_files/5.jpg" alt="">
     <h2>මෙන්න මේ බටන් එක ඔන් කරගන්නකො...</h2>
     <img src="store_files/6.jpg" alt="">
-    <h2>දැන් instrall කරගන්න පුලුවන්</h2>
+    <h2>දැන් install කරගන්න පුලුවන්</h2>
     <img src="store_files/7.jpg" alt="">
     <h2>ඔන්න දැන් ඔයාලට මේ app එක ඇතුලෙ virus හරි වෙන මොකක් හරි ප්‍රශ්නයක් තියද කියලා බලන්න google එකෙන් scan කරන්න කියනවා</h2>
     <img src="store_files/8.jpg" alt="">
